# jira_agent

./: .env.example  .gitignore  pyproject.toml
config/: projects.yaml
docker/: cocoindex-compose.yml  fix-loop-node.Dockerfile  fix-loop.Dockerfile
scripts/: check_github_access.py  check_jira_assigned.py  cocoindex_setup.sh
specs/: jira-autofix-agent-spec.md
src/jira_agent/: config.py  main.py  models.py  orchestrator.py
src/jira_agent/agents/: fix_loop.py  model.py  runner_utils.py  triage.py
src/jira_agent/clients/: __init__.py  github_client.py  jira_client.py
src/jira_agent/execution/: docker_runner.py  repo_mirror.py
src/jira_agent/logging_store/: mcp_call_log.py  run_log.py  timing_log.py
src/jira_agent/tools/: cocoindex_mcp.py
tests/: conftest.py  test_cocoindex_mcp.py  test_config.py  test_fix_loop_tools.py  test_fix_loop_truncation.py  test_mcp_call_log.py  test_mock_clients.py  test_orchestrator.py  test_repo_mirror.py  test_run_log.py  test_timing_log.py
tests/fixtures/: conftest.py  sample_tickets.py
tests/fixtures/sample_repo/checkout/: service.py  validators.py
tests/fixtures/sample_repo/tests/: test_checkout.py
