[project]
name = "jira-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "google-adk[mcp]>=2.4.0",
    "google-cloud-storage>=3.12.1",
    "jira>=3.10.5",
    "pydantic-settings>=2.14.2",
    "pygithub>=2.9.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
jira-agent = "jira_agent.main:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
